[gd_scene load_steps=2 format=3 uid="uid://bs3qq3eildbk7"]

[ext_resource type="Script" path="res://ui/console/console.gd" id="1_igwog"]

[node name="Console" type="MarginContainer"]
modulate = Color(1, 1, 1, 0.705882)
anchors_preset = -1
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_igwog")
metadata/_edit_horizontal_guides_ = [5.0, -83.0]

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Output" type="TextEdit" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
placeholder_text = "Text will show up here!"

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
placeholder_text = "Press T to enter commands"

[node name="VisibilityTimer" type="Timer" parent="."]

[connection signal="text_submitted" from="Control/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_visibility_timer_timeout"]
